samples/_failures_safe/1761393939_e75c1f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2bbae4a1.c: In function ‘main’:
./samples/SAFE/__tmp_2bbae4a1.c:150:5: error: expected declaration or statement at end of input
  150 |     if (strcmp(input, "ALL") == 0) {
      |     ^~
./samples/SAFE/__tmp_2bbae4a1.c:150:5: error: expected declaration or statement at end of input
